fixed pre tag text wrap behaviour, added print feature to snapshot

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -166,6 +166,15 @@ h2 {
 
 .modal-body pre {
     white-space: pre-wrap;
+    /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla, since 1999 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    word-wrap: break-word;
+    /* Internet Explorer 5.5+ */
 }
 
 main {
@@ -317,6 +326,16 @@ hr {
 #weeklySnapshot pre {
     padding-left: 15%;
     padding-right: 15%;
+    white-space: pre-wrap;
+    /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla, since 1999 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    word-wrap: break-word;
+    /* Internet Explorer 5.5+ */
 }
 
 .question-div {
